<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeechReminder</string>
    <string name="title_activity_main">SpeechReminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in_up">SignInUpActivity</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="repeat_on">Repeat on:</string>
    <string name="Title">Title</string>
    <string name="Description">Description</string>
    <string name="StartAt">Start on</string>
    <string name="isAllDay">Is all day</string>
    <string name="EndAt">End on</string>
    <string name="At">at</string>
    <string name="Save">Save</string>
    <string name="Sunday">S</string>
    <string name="Monday">M</string>
    <string name="Tuesday">T</string>
    <string name="Wednesday">W</string>
    <string name="Thursday">T</string>
    <string name="Friday">F</string>
    <string name="Saturday">S</string>
    <string name="offLine">Work Locally</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_speechreminder">Speech Reminder</string>
    <string name="title_activity_speechreminder_details">Details</string>
    <string name="add_item">New Event</string>
    <string name="save_item">Save</string>
    <string name="delete_item">Delete</string>
    <string name="location_web_site">More apps</string>
    <string name="content_email">Contact developer</string>
    <string name="speech_preview">Voice preview</string>
    <string name="action_home">Home</string>
    <string name="content_license">License</string>
    <string name="rate_app">Rate on Google Play</string>
    
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
	<string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
	<string name="crash_notif_title">SpeechReminder has crashed...</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>

	<string name="crash_dialog_title">SpeechReminder has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click OK.</string>
	<string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
	<string name="crash_dialog_ok_toast">Thank you !</string>

</resources>
